@@ -127,6 +127,7 @@ Current development version: 3.30-11 (2020-07-16)
 - 11: Issue #870: Now ini property "noExportImport=1" prevents code export/import;
       group export prevention had been forgotten [CPNV]2
 - 11: Issue #733: GUI scale factor not to be overwritten by central ini file <2>
+- 11: Bugfix #873: Compromised type definition export to C++, C#, Java mended <2>
 - 11: Bugfix #784: Error on code export/preview of CALLs with non-Ascii names <2>
 - 11: Issue #784: Identifiers with non-ascii letters now tolerated but warned <2>
 
